--- a/lib/index.html
+++ b/lib/index.html
@@ -132,7 +132,7 @@
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="card project-card h-100">
-                        <img src="/img/dishes.jpg" class="card-img-top" alt="Project 1">
+                        <img src="/img/dishes.jpg" class="card-img" alt="Project 1">
                         <div class="card-body">
                             <h5 class="card-title text-center">Ristorante</h5>
                             <p class="card-text text-center">Template di un sito web completamente responsive di un ristorante immaginario.
@@ -143,7 +143,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card project-card h-100">
-                        <img src="/img/Store Locator.png" class="card-img-top" alt="Project 2">
+                        <img src="/img/Store Locator.png" class="card-img" alt="Project 2">
                         <div class="card-body">
                             <h5 class="card-title">Store Locator</h5>
                             <p class="card-text">Localizzatore di negozi fittizzi, divisi in categorie e con la possibilità di avere la posizione precisa.</p>
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <!--<div class="col-md-4">
                     <div class="card project-card h-100">
                         <img src="/api/placeholder/400/300" class="card-img-top" alt="Project 3">
                         <div class="card-body">
@@ -160,7 +160,7 @@
                             <a href="#" class="btn btn-outline-primary">View Project</a>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
